# halo2-study

./: Cargo.toml
src/: is_zero.rs  lib.rs  merkle_tree.rs
src/fibonacci/: example1.rs  example2.rs  example3.rs  example4.rs
src/merkle_tree/: sinsemilla.rs
src/range_check/: example1.rs  example2.rs
src/range_check/example2/: table.rs
src/zkmips/: instructions.rs
